# kengine

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md
src/: app.cc  app.h  common.h  const.inc  dib.cc  dib.h  dlgproc.inc  font.inc  gui.inc  helpers.inc  kengine.asm  macros.inc  main.cc  mem.inc  memory.cc  memory.h  options.inc  renderer.h  structs.inc  window.cc  window.h  wndproc.inc
